# Exercise-List-Operational-Systems

./: .gitignore  CMakeLists.txt  Makefile.mk  README.md
List01/: main.c
List_01/: exercise_01.c  exercise_02.c
List_01/exercise_01/: Makefile
List_02/: exercise_01.c  exercise_02.c  exercise_03.c
List_02/exercise_02/: Makefile
List_02/exercise_02/source/: main.c
List_02/exercise_03/: Makefile
List_03/: exercise_04.c
List_03/exercise_01/source/: main.c
List_03/exercise_02/source/: main.c
List_03/exercise_03/source/: main.c
List_03/exercise_04/: Makefile
List_03/exercise_04/source/: main.c
List_04/exercise_01/: Makefile
List_04/exercise_01/source/: main.c
List_04/exercise_02/: Makefile  exercise02
List_04/exercise_02/source/: main.c
List_04/exercise_03/: Makefile
List_04/exercise_03/source/: main.c
List_04/exercise_04/: Makefile
List_04/exercise_04/source/: main.c
List_05/exercise_01/: Makefile
List_05/exercise_01/source/: consumer.c  main.c  producer.c  shared.c  shared.h
List_05/exercise_02/: Makefile
List_05/exercise_02/source/: listener.c  main.c  message.c  message.h  shared.c  shared.h  watcher.c
List_05/exercise_03/: Makefile
List_05/exercise_03/source/: main.c
examples/: itimer.c  main.c
sockts/: client.c  server.c
