cmake_minimum_required(VERSION 3.14)
project(Exercise_List_Operational_Systems C)

set(CMAKE_C_STANDARD 99)

# List 01
# add_executable(Exercise_List_Operational_Systems List_01/exercise_01.c)
# add_executable(Exercise_List_Operational_Systems List_01/exercise_02.c)

# List 02
# add_executable(Exercise_List_Operational_Systems List_02/exercise_01.c)
# add_executable(Exercise_List_Operational_Systems List_02/exercise_02.c)
# add_executable(Exercise_List_Operational_Systems List_02/exercise_03.c)

# List 03
add_executable(Exercise_List_Operational_Systems List_03/exercise_04.c)